--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "all": "npm install && npm run build && npm run lint && npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "all": "npm install && npm run build && npm run lint && npm run serve"
   },
   "dependencies": {
+    "@mdi/font": "^3.6.95",
     "axios": "^0.19.2",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.4",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -23,6 +26,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "material-design-icons-iconfont": "^5.0.1",
+    "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-markdown": "^2.2.4",
     "vue-template-compiler": "^2.6.11"
   }
