--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "all": "npm install && npm run build && npm run lint && npm run serve"
+    "start": "node server.js"
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "axios": "^0.19.2",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
